--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -22,8 +22,9 @@
         android:title="@string/title_event" />
 
     <item
-        android:id="@+id/navigation_map"
-        android:icon="@drawable/ic_map_black_24dp"
-        android:title="@string/title_map" />
+        android:id="@+id/navigation_video"
+        android:icon="@drawable/ic_videocam_black_24dp"
+        android:title="@string/title_video" />
+
 
 </menu>
