--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -39,7 +39,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/colorPrimaryDark"
+        app:itemIconTint="@color/white"
+        app:itemTextColor="@color/white"
         app:menu="@menu/navigation" />
 
 </LinearLayout>
