--- a/app/src/main/res/layout/grid_item_main.xml
+++ b/app/src/main/res/layout/grid_item_main.xml
@@ -7,10 +7,10 @@
         android:id="@+id/picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="45dp"
-        android:paddingLeft="45dp"
-        android:paddingRight="45dp"
-        android:paddingTop="45dp"
+        android:paddingBottom="@dimen/main_grid_icon_padding_bottom"
+        android:paddingTop="@dimen/main_grid_icon_padding_top"
+        android:paddingLeft="@dimen/main_grid_icon_padding_left"
+        android:paddingRight="@dimen/main_grid_icon_padding_right"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -19,9 +19,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:gravity="center"
-        android:paddingBottom="15dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="15dp" />
+        android:paddingBottom="@dimen/main_grid_text_padding_bottom"
+        android:paddingTop="@dimen/main_grid_text_padding_top"
+        android:paddingLeft="@dimen/main_grid_text_padding_left"
+        android:paddingRight="@dimen/main_grid_text_padding_right"/>
 
 </FrameLayout>
