--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,13 @@
     <dimen name="backdrop_title">30dp</dimen>
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="backdrop_subtitle_padding">10dp</dimen>
+
+    <dimen name="main_grid_icon_padding_bottom">45dp</dimen>
+    <dimen name="main_grid_icon_padding_top">45dp</dimen>
+    <dimen name="main_grid_icon_padding_left">25dp</dimen>
+    <dimen name="main_grid_icon_padding_right">25dp</dimen>
+    <dimen name="main_grid_text_padding_bottom">15dp</dimen>
+    <dimen name="main_grid_text_padding_top">55dp</dimen>
+    <dimen name="main_grid_text_padding_left">5dp</dimen>
+    <dimen name="main_grid_text_padding_right">5dp</dimen>
 </resources>
