--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,9 @@
 
             <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:descendantFocusability="beforeDescendants"
+                android:focusableInTouchMode="true">
 
                 <ImageView
                     android:id="@+id/backdrop"
@@ -56,11 +58,28 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:padding="@dimen/backdrop_subtitle_padding"
                         android:text="@string/backdrop_subtitle"
                         android:textColor="@android:color/white"
-                        android:textSize="@dimen/backdrop_subtitle"
-                        android:gravity="center"
-                        android:padding="@dimen/backdrop_subtitle_padding"/>
+                        android:textSize="@dimen/backdrop_subtitle" />
+
+                    <EditText
+                        android:id="@+id/search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:layout_below="@+id/search"
+                        android:layout_centerHorizontal="true"
+                        android:ems="10"
+                        android:hint="جستجو"
+                        android:focusableInTouchMode="false"
+                        android:imeOptions="flagNoExtractUi"
+                        android:shadowColor="@color/white"
+                        android:textColor="@color/white"
+                        android:textColorHighlight="@color/white"
+                        android:textColorHint="@color/white"
+                        android:textColorLink="@color/white"
+                        android:background="@drawable/background_search"></EditText>
 
                 </LinearLayout>
             </RelativeLayout>
@@ -86,10 +105,10 @@
             android:id="@+id/gridview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:verticalSpacing="5dp"
             android:horizontalSpacing="5dp"
+            android:numColumns="3"
             android:stretchMode="columnWidth"
-            android:numColumns="3"/>
+            android:verticalSpacing="5dp" />
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/fab"
