--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="colorPrimaryDark">#5d4037</color>
     <color name="colorAccent">#FC0000</color>
 
-    <color name="white">#FFFFFF</color>
+    <color name="white">#ffffff</color>
 </resources>
