--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,20 +2,20 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-
     <dimen name="fab_margin">16dp</dimen>
 
+    <!-- Main page image -->
     <dimen name="detail_backdrop_height">200dp</dimen>
-
     <dimen name="backdrop_title">30dp</dimen>
     <dimen name="backdrop_subtitle">18dp</dimen>
     <dimen name="backdrop_subtitle_padding">10dp</dimen>
 
-    <dimen name="main_grid_icon_padding_bottom">45dp</dimen>
-    <dimen name="main_grid_icon_padding_top">45dp</dimen>
-    <dimen name="main_grid_icon_padding_left">25dp</dimen>
-    <dimen name="main_grid_icon_padding_right">25dp</dimen>
-    <dimen name="main_grid_text_padding_bottom">15dp</dimen>
+    <!-- Main page icons -->
+    <dimen name="main_grid_icon_padding_bottom">40dp</dimen>
+    <dimen name="main_grid_icon_padding_top">40dp</dimen>
+    <dimen name="main_grid_icon_padding_left">40dp</dimen>
+    <dimen name="main_grid_icon_padding_right">40dp</dimen>
+    <dimen name="main_grid_text_padding_bottom">5dp</dimen>
     <dimen name="main_grid_text_padding_top">55dp</dimen>
     <dimen name="main_grid_text_padding_left">5dp</dimen>
     <dimen name="main_grid_text_padding_right">5dp</dimen>
