--- a/app/src/main/res/drawable/background_search.xml
+++ b/app/src/main/res/drawable/background_search.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:padding="10dp"
+    android:paddingBottom="85dp"
+    android:paddingTop="85dp"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
     android:shape="rectangle">
-    <solid android:color="#80000000" />
+    <solid android:color="#b4000000" />
     <corners
-        android:bottomLeftRadius="1dp"
-        android:bottomRightRadius="1dp"
-        android:topLeftRadius="1dp"
-        android:topRightRadius="1dp" />
+        android:bottomLeftRadius="4dp"
+        android:bottomRightRadius="4dp"
+        android:topLeftRadius="4dp"
+        android:topRightRadius="4dp" />
 </shape>
