--- a/app/src/main/res/drawable/background_search.xml
+++ b/app/src/main/res/drawable/background_search.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:paddingBottom="85dp"
-    android:paddingTop="85dp"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp"
-    android:shape="rectangle">
-    <solid android:color="#b4000000" />
-    <corners
-        android:bottomLeftRadius="4dp"
-        android:bottomRightRadius="4dp"
-        android:topLeftRadius="4dp"
-        android:topRightRadius="4dp" />
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item
+        android:left="50dp"
+        android:right="50dp"
+        android:top="0dp"
+        android:bottom="15dp">
+        <shape android:shape="rectangle">
+            <solid android:color="#dcffffff"/>
+            <corners android:radius="2dp" />
+        </shape>
+    </item>
+</layer-list>
