--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,13 @@
 
     <color name="white">#ffffff</color>
     <color name="background_material_light">#efebe9</color>
+
+
+    <color name="list_divider">#d7ccc8</color>
+
+
+
+    <color name="dark_grey">#424242</color>
+    <color name="medium_grey">#9E9E9E</color>
+    <color name="button_grey">#757575</color>
 </resources>
