--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_city"
+        android:icon="@drawable/ic_location_city"
+        android:title="@string/title_city"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/menu_search"
+        android:icon="@drawable/ic_search"
         android:title="@string/action_search"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always"
-        android:icon="@android:drawable/ic_search_category_default"/>
+        app:showAsAction="always" />
 </menu>
