--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,29 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
         android:id="@+id/navigation_home"
+        android:enabled="true"
         android:icon="@drawable/ic_home"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_cafe"
+        android:enabled="true"
         android:icon="@drawable/ic_local_cafe"
-        android:title="@string/title_cafe" />
+        android:title="@string/title_cafe"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_news"
+        android:enabled="true"
         android:icon="@drawable/ic_content_paste"
-        android:title="@string/title_news" />
+        android:title="@string/title_news"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_event"
+        android:enabled="true"
         android:icon="@drawable/ic_event_available"
-        android:title="@string/title_event" />
+        android:title="@string/title_event"
+        app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/navigation_video"
+        android:enabled="true"
         android:icon="@drawable/ic_videocam"
-        android:title="@string/title_video" />
+        android:title="@string/title_video"
+        app:showAsAction="ifRoom" />
 
 </menu>
