--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.faragostaresh.cafeyab.SearchActivity">
+    tools:context="com.faragostaresh.cafeyab.AboutActivity">
 
     <FrameLayout
         android:id="@+id/content"
@@ -22,7 +22,7 @@
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:text="@string/activity_search" />
+            android:text="@string/activity_cafe_single" />
 
     </FrameLayout>
 
