--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -53,10 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                android:horizontalSpacing="16dp"
-                android:numColumns="1"
-                android:padding="8dp"
-                android:verticalSpacing="16dp" />
+                android:numColumns="1" />
 
         </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
 
