--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -19,7 +19,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
             android:src="@android:drawable/ic_dialog_map" />
 
         <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
@@ -30,16 +29,12 @@
 
             <GridView
                 android:id="@+id/videolist"
-                android:numColumns="1"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:horizontalSpacing="16dp"
-                android:verticalSpacing="16dp"
                 android:clipToPadding="false"
-                android:padding="8dp"/>
+                android:numColumns="1" />
 
         </com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout>
-
 
     </FrameLayout>
 
