--- a/app/src/main/res/drawable/background_box.xml
+++ b/app/src/main/res/drawable/background_box.xml
@@ -2,8 +2,8 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#21000000" />
-            <corners android:radius="2dp" />
+            <solid android:color="@android:color/darker_gray" />
+            <corners android:radius="1dp" />
         </shape>
     </item>
 
