--- a/app/src/main/res/layout/activity_video_list.xml
+++ b/app/src/main/res/layout/activity_video_list.xml
@@ -19,6 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
             android:src="@android:drawable/ic_dialog_map" />
 
         <com.orangegangsters.github.swipyrefreshlayout.library.SwipyRefreshLayout
