--- a/app/src/main/res/layout/activity_cafe_list.xml
+++ b/app/src/main/res/layout/activity_cafe_list.xml
@@ -27,7 +27,7 @@
             android:id="@+id/sliding_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="bottom"
+            android:gravity="top"
             sothree:umanoDragView="@+id/dragView"
             sothree:umanoOverlay="true"
             sothree:umanoPanelHeight="68dp"
@@ -44,7 +44,7 @@
                     android:id="@+id/swipyrefreshlayout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="68dp"
+                    android:layout_marginTop="68dp"
                     app:srl_direction="bottom">
 
                     <GridView
@@ -67,23 +67,6 @@
                 android:clickable="true"
                 android:focusable="false"
                 android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="68dp"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/search_title"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:gravity="center_vertical"
-                        android:paddingRight="10dp"
-                        android:text="@string/filter_title"
-                        android:textSize="16sp" />
-
-                </LinearLayout>
 
                 <ScrollView
                     android:layout_width="match_parent"
@@ -246,6 +229,24 @@
                     </LinearLayout>
 
                 </ScrollView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="68dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/search_title"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:gravity="center_vertical"
+                        android:paddingRight="10dp"
+                        android:text="@string/filter_title"
+                        android:textSize="16sp" />
+
+                </LinearLayout>
+
             </LinearLayout>
         </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
